# blent-botecom

./: .gitignore  README.md  app_streamlit.py  pyproject.toml  run.sh
infos/: etapes.md  orders.csv  orders.db  users.csv
src/customer_service_bot/: __init__.py  assistant.py  cli.py  config.py  database.py  llm.py  router.py
tests/: conftest.py  test_assistant.py
