[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-service-client"
version = "0.1.0"
description = "Assistant de service client pour le suivi de commandes e-commerce avec Python, LangChain et Hugging Face."
authors = [

    { name = "Patrick Bory", email = "patrickbory@gmail.com" }

]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "accelerate>=0.30.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0,<5.0.0",
    "torch>=2.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
ui = [
    "streamlit>=1.35.0",
]
mac = [
    "mlx-lm>=0.18.0",
]
cuda = [
    "bitsandbytes>=0.43.0",
]

[project.scripts]
assistant-service-client = "customer_service_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
